--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "ng test"
   },
   "private": true,
+  "engines": {
+    "node": ">=20.10.0"
+  },
   "dependencies": {
     "@angular/animations": "^19.2.17",
     "@angular/cdk": "^19.2.16",
