build: Specify Node.js `>=20.10.0` as an engine requirement in `package.json`.

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/test-menu1",
+            "outputPath": "dist/food4ducks-front",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
